<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="pedir">pedir</string>
    <string name="parar">parar</string>
    <string name="dobrar">dobrar</string>
    <string name="restart">restart</string>
    <string name="card1">card1</string>
    <string name="card3">card3</string>
    <string name="card2">card2</string>
    <string name="c">C</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="division">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtration">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
</resources>